syntax = "proto3";

package asaycle.routiq.v1;

import "google/api/annotations.proto";
import "google/api/resource.proto";

option go_package = "github.com/asaycle/routiq/api/proto/v1;routiq";

service TagService {
  // タグを作成
  rpc CreateTag(CreateTagRequest) returns (Tag) {
    option (google.api.http) = {
      post : "/v1/tags"
      body : "tag"
    };
  }

  rpc ListTags(ListTagsRequest) returns (ListTagsResponse) {
    option (google.api.http) = {
      get : "/v1/tags"
      additional_bindings {
        post : "/asaycle.routiq.v1.TagService/ListTags" // gRPC-Web用
        body : "*"
      }
    };
  };
}

message Tag {
  option (google.api.resource) = {
    type : "asaycle.routiq.v1.Tag"
    pattern : "tags/{tag}"
    singular : "tag"
    plural : "tags"
  };

  string id = 1;   // フルリソース名: tags/{tag}
  string name = 2; // 表示用の名前
}

// タグ作成リクエスト
message CreateTagRequest {
  Tag tag = 1; // 作成するタグ
}

message ListTagsRequest {
  string filter = 1;
  int32 page_size = 2;   // 1ページあたりの結果数
  string page_token = 3; // 次のページへのトークン
}

message ListTagsResponse {
  repeated Tag tags = 1;      // Tagのリスト
  string next_page_token = 2; // 次のページへのトークン
}